evaluation/test_suite/negative/ub17/1.c
#include <float.h>
#include <stdio.h>
int main()
{
    double x = (double)(FLT_MAX);
    float y = (float)x;
    printf("%f\n", (double)y);
}
